fixed links, change title font

--- a/style.css
+++ b/style.css
@@ -20,10 +20,9 @@ header div nav {
     background-color: rgb(17, 66, 50);
     text-align: center;
     border: 1px solid rgb(8, 179, 8);
-    color: rgb(8, 179, 8);
 }
 a:link {
-    color: green;
+    color: rgb(8, 179, 8);
     background-color: transparent;
     text-decoration: none;
 }
@@ -49,6 +48,6 @@ h1 {
     text-align: center;
     font-size: 50px;
     border-bottom: 1px solid rgb(8, 179, 8);
-    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Source Code Pro', monospace;
     color: rgb(8, 179, 8);
 }
